# zhmm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  make_app.sh  make_cmd.sh  mv_app.sh  mv_cmd.sh  myicon.icns  pyproject.toml  requirements.txt  run.sh  zhmm.spec
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: TOTP使用指南.md
docs/browser_fill/: README.md  zhmm-fill.user.js
scripts/: rename_imports.sh  update_version.py
tests/: __init__.py  conftest.py  test_core_backup_service.py  test_core_export_service.py  test_core_models.py  test_core_password_service.py  test_core_password_strength.py  test_core_site_catalog.py  test_core_totp.py  test_core_vault.py  test_crypto.py  test_data_conversion.py  test_sm_crypto.py  test_sm_data.py  test_string_util.py  test_url_util.py
zhmm/: __init__.py  __main__.py  app_config.py  app_setting.py  backup_manager.py  cmd_main.py  cmd_ui.py  data_exporter.py  gl_data.py  gl_date.py  gl_sm_util.py  gl_ui.py  gl_util.py  main.py  sm_data.py  sm_ex.py  sm_util.py  theme_manager.py  ui_app.py  ui_config.py  ui_data_exporter.py  ui_decrypt_data.py  ui_define.py  ui_defined.py  ui_main.py  ui_password.py
zhmm/app/: __init__.py  cli_app.py  gui_app.py
zhmm/browser_bridge/: __init__.py  controller.py  dialog.py  server.py
zhmm/cli/: __init__.py  commands.py  interactive.py
zhmm/cloud/: cloud_base.py  cloud_cos.py  cloud_oss.py  cloud_sync.py  file_local.py
zhmm/config/: __init__.py  app_config.py  constants.py  paths.py  saved_files.py  settings.py
zhmm/core/: __init__.py  backup_service.py  crypto.py  errors.py  export_service.py  models.py  password_service.py  password_strength.py  site_catalog.py  totp.py  vault.py
zhmm/data/: __init__.py  sm_crypto.py  sm_data_manager.py  sm_data_types.py
zhmm/gui/: __init__.py  clipboard_util.py  decrypt_data_view.py  file_list_widget.py  main_window.py  texts.py  theme.py  welcome_widget.py
zhmm/gui/login/: __init__.py  create_vault_dialog.py  login_window.py
zhmm/gui/password/: __init__.py  add_dialog.py  add_role_dialog.py  history_dialog.py  operations.py  random_dialog.py  reveal_delegate.py  table_models.py  tag_sidebar.py  window.py
zhmm/gui/settings/: __init__.py  backup_list_dialog.py  backup_settings.py  data_management_window.py  import_export_handlers.py  rekey_dialog.py  site_catalog_dialog.py  tag_management_dialog.py  window.py
zhmm/qt_components/: base_window.py  dialog.py  drag_drop_button.py  plain_text_edit.py
zhmm/resources/: zhmm模版.xlsx
zhmm/ui/: add_password_dialog.py  data_manager_widget.py  file_list_view.py  file_list_widget.py  login_dialog.py  setting_widget.py  welcome_widget.py
zhmm/utils/: anti_capture.py  array_ex.py  array_util.py  data_conversion.py  date.py  date_ex.py  date_util.py  dict_util.py  file_sys.py  file_util.py  json.py  log.py  network.py  print_log.py  string.py  string_ex.py  string_util.py  table_printer.py  url_util.py
zhmm/widgets/: __init__.py  base_window.py  combo_box.py  dialog.py  drag_drop_button.py  eye_icon.py  plain_text_edit.py  strength_bar.py  tag_editor.py
zhmm/window_login/: login_window.py
zhmm/window_password/: add_password_dialog.py  password_operations.py  password_table_models.py  password_window.py  random_password_dialog.py  ui_password.py
zhmm/window_setting/: backup_list_dialog.py  backup_settings.py  change_openid_dialog.py  cloud_sync_handlers.py  credentials_input_dialog_cos.py  import_export_handlers.py  setting_window.py
