[project]
name = "zhmm"
version = "0.1.4"
description = "A cross-platform password manager with Chinese SM crypto (SM2/SM3/SM4) and cloud sync — PyQt6 GUI + CLI"
authors = [
    {name = "Lioesquieu"}
]
maintainers = [
    {name = "Lioesquieu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.17"
keywords = [
    "password-manager",
    "pyqt6",
    "gmssl",
    "sm2",
    "sm3",
    "sm4",
    "cryptography",
    "cli",
    "gui",
    "cloud-sync",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "gmssl (==3.2.2)",
    "pycryptodomex (==3.22.0)",
    "pyqt6 (==6.9.0)",
    "pyqt6-qt6 (==6.9.0)",
    "pyqt6-sip (==13.10.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "tzdata (==2025.2)",
    "cos-python-sdk-v5 (>=1.9.37,<2.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[project.scripts]
zhmm = "zhmm.main:main"
zhmm-cli = "zhmm.cmd_main:main"

[project.urls]
Homepage = "https://github.com/Lioesquieu/zhmm"
Repository = "https://github.com/Lioesquieu/zhmm"
Issues = "https://github.com/Lioesquieu/zhmm/issues"
Changelog = "https://github.com/Lioesquieu/zhmm/blob/main/CHANGELOG.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.13.0", python = ">=3.10.17,<3.14" }
isort = "^6.0.1"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["zhmm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
