[project]
name = "zhmm"
version = "0.2.8"
description = "A cross-platform local-first password manager with Chinese SM crypto (SM3/SM4) — PyQt6 GUI + CLI"
authors = [
    {name = "Lioesquieu"}
]
maintainers = [
    {name = "Lioesquieu"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10.17"
keywords = [
    "password-manager",
    "pyqt6",
    "gmssl",
    "sm3",
    "sm4",
    "cryptography",
    "cli",
    "gui",
    "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "gmssl (==3.2.2)",
    "pyqt6 (==6.9.0)",
    "pyqt6-qt6 (==6.9.0)",
    "pyqt6-sip (==13.10.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "tzdata (==2025.2)",
    "cryptography (>=45.0.4,<46.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[project.scripts]
zhmm = "zhmm.__main__:main"
zhmm-cli = "zhmm.app.cli_app:main"

[project.urls]
Homepage = "https://github.com/Lioesquieu/zhmm"
Repository = "https://github.com/Lioesquieu/zhmm"
Issues = "https://github.com/Lioesquieu/zhmm/issues"
Changelog = "https://github.com/Lioesquieu/zhmm/blob/main/CHANGELOG.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.13.0", python = ">=3.10.17,<3.14" }
pre-commit = "^4.2.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["build", "dist", "zhmm/resources"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (ruff-format handles)
    "B008",  # function call in default arg
    "SIM117", # allow nested `with` for readability
]

[tool.ruff.lint.isort]
known-first-party = ["zhmm"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"zhmm/gui/**" = ["B008"]  # Qt constructors frequent in defaults

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["zhmm", "tests"]

[[tool.mypy.overrides]]
module = ["zhmm.core.*", "zhmm.config.*", "zhmm.utils.*", "zhmm.cli.*"]
strict = true

[[tool.mypy.overrides]]
# Qt-adjacent utilities: 继承/装饰 PyQt6 符号时 mypy 因无 stubs 将其视为 Any,
# 会产生一批噪音级 misc 错误。保留其他 strict 检查，仅屏蔽该类错误。
module = [
    "zhmm.config.settings",
    "zhmm.utils.network",
]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["zhmm.gui.*", "zhmm.app.*", "zhmm.widgets.*", "zhmm.data.*"]
# Qt signal/slot types make strict checking painful; keep relaxed for UI layer.
# - Don't require full annotations on GUI functions.
# - Suppress noisy Qt-specific errors: untyped internal helpers, optional
#   menu-bar / app-config accessors that Qt / lazy-init return as None.
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
disable_error_code = ["no-untyped-call", "attr-defined", "union-attr", "assignment", "arg-type", "return-value", "index", "operator", "call-arg", "misc", "unused-ignore", "override", "type-arg", "no-untyped-def", "var-annotated", "no-any-return"]

[[tool.mypy.overrides]]
module = "gmssl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Tests don't need full annotations; focus on assertion behavior.
# pytest 的 fixture/parametrize 装饰器无类型标注，会触发 misc；统一屏蔽。
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["unused-ignore", "misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
